kubernetes/overlays/eks/dev/frontend/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      annotations:
        vault.hashicorp.com/agent-inject-secret-config: "secret/data/craftista/dev/frontend/config"
    spec:
      containers:
        - name: frontend
          image: 8060633493/craftista-frontend:dev-latest
